# MrCoding

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
.github/workflows/: deploy.yml
public/: index.html
server/: Cargo.toml  app.ts  modules.d.ts  package-lock.json  package.json  tsconfig.json
server/src/: build.rs  main.rs
src/: App.vue  main.ts  shims-vue.d.ts
src/api/: accountManager.ts  api.ts  historyLoader.ts  liff.ts  liffUserService.ts  webSocketManager.ts
src/api/types/: apiTypes.ts
src/assets/scss/: app.scss
src/assets/scss/components/: _bottom-controller.scss  _msg-area.scss  _msg-box.scss  _msg-input.scss  _msg-status.scss  _msg.scss  components.scss
src/assets/scss/pages/: _chat-room.scss  _error.scss  chatroom-redirect.scss  chatroom.scss  dashboard.scss  home.scss  login.scss  not-found.scss  page.scss
src/components/: BottomController.vue  Msg.vue  MsgArea.vue  MsgInput.vue
src/components/App/: StateBadge.vue
src/components/chatroom/: AppBar.vue  BottomController.vue  MsgArea.vue  MsgInput.vue
src/components/dashboard/: RoomList.vue  Settings.vue
src/components/fixing/: RotatingIcon.vue  logo.vue
src/pages/: Chatroom.vue  ChatroomRedirect.vue  Dashboard.vue  Fixing.vue  Home.vue  Login.vue  NotFound.vue
src/router/: index.ts
src/store/: apiTypes.ts  app.ts  index.ts
src/utils/: adminDataFetcher.ts  api.ts  avatarCompression.ts  debounce.ts  jwtService.ts  jwtSignIn.ts  jwtToken.ts  replaceAvatar.ts  requestAvatar.ts  scrollPositionMaintainer.ts  timeFormater.ts  uuid.ts
(+23 files in other folders)
