[package]
name = "server"
version = "0.1.0"
authors = ["Xanonymous <trusaidlin@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.2"
actix-web-static-files = "2.0"

[build-dependencies]
actix-web-static-files = "2.0"
